--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  background-color: lightgray;
+  background-color: #b9b9b9;
 }
 
 .hud {
@@ -34,12 +34,12 @@
   margin: 0;
   padding: 0;
 }
-.counterRed {
+.counterPlayer1 {
   width: 50%;
   float: left;
   border: 1px solid red;
 }
-.counterBlue {
+.counterPlayer2 {
   width: 50%;
   float: left;
   border: 1px solid blue;
@@ -50,4 +50,94 @@ div.col {
 .board {
   margin: 0px;
   padding: 30px;
+}
+
+.sgb_cont {
+  height: 80px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.startGameButton {
+  width: 90%;
+  height: 100%;
+  font-family: fantasy;
+  color: #0000009d;
+  font-size: 30px;
+  letter-spacing: 15px;
+  background-color: #4958da80;
+  border: #02047c69 4px solid;
+  transition: 0.5s;
+  box-shadow: 0px 0px 20px #00000062;
+}
+.startGameButton:hover {
+  color: #ffffff;
+  font-size: 35px;
+  letter-spacing: 2px;
+  width: 89%;
+  border: #002fff 4px solid;
+  background-color: #0722bb9a;
+  box-shadow: 0px 0px 20px #002fff;
+}
+
+.form_cont {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  margin: 20px;
+}
+
+.form_div {
+  background-color: #abb3be;
+  border: #7f95ad 6px solid;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px #0001306b;
+  height: 400px;
+  transition: 0.3s;
+}
+
+.form_div:hover {
+  background-color: #8c949e;
+  border: #007bff 6px solid;
+  box-shadow: 0px 0px 20px #007bff;
+}
+
+.label_div {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: #0000009d;
+  font-size: 50px;
+  letter-spacing: 3px;
+  padding: 20px;
+  background-color: transparent;
+  text-align: center;
+}
+
+.select_div {
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  padding: 20px;
+}
+
+.control_div {
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  padding: 20px;
+}
+
+.form_controls {
+  height: 50px;
+  width: 90%;
+  background-color: #ebebebd3;
+  box-shadow: 0px 4px 5px #00000048;
+}
+
+.form_select {
+  height: 60px;
+  width: 90%;
+  background-color: #ebebebd3;
+  box-shadow: 0px 4px 5px #00000048;
 }
